--- a/app.css
+++ b/app.css
@@ -60,7 +60,7 @@ p {
 }
 .social-container{
   border: 4px solid #fff;
-  background-color: #985277;
+  background-color: #A9D2D5;
   transition-duration: 0.5s;
 }
 
