--- a/css/app.css
+++ b/css/app.css
@@ -1,10 +1,12 @@
+/***
+
+  OLD CSS FILE - NO LONGER USED
+
+***/
+
 /* HEADER CSS */
 header {
   background-color: transparent;
-}
-
-h1, h2, h3, h4, h5 {
-  font-family: 'Fjalla One', sans-serif;
 }
 
 h2 {
