--- a/css/wdc.css
+++ b/css/wdc.css
@@ -18,6 +18,7 @@ Reseda green: #648767;
   --main-brand-pop-two-colour: #F26CA7;
   --main-brand-pop-three-colour: #6290C3;
   --main-brand-background-color: #E7D7C1;
+  --main-white-colour: #FFF;
 }
 
 @supports (font-variation-settings: normal) {
@@ -195,6 +196,7 @@ button.navbar-toggler {
 button.navbar-toggler:focus {
   outline: 2px solid var(--main-brand-dark-colour) !important;
   border-radius: 0px;
+  box-shadow: none;
 }
 button.navbar-toggler.collapsed:focus {
   outline: 2px solid white;
@@ -304,7 +306,7 @@ input[type=text], input[type=email], textarea{
   color:#191919 !important;
 }
 .btn-color {
-  background-color:#fff; 
+  background-color:var(--main-brand-background-color); 
   width: 150px;
   color: var(--main-text-colour);
   font-weight: 600;
@@ -316,7 +318,7 @@ input[type=text], input[type=email], textarea{
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 .btn-color:hover { 
-  background-color: var(--main-brand-pop-colour);
+  background-color: #fff;
   color: var(--main-text-colour);
   border-radius: 5px;
   border: none;
@@ -326,15 +328,16 @@ input[type=text], input[type=email], textarea{
 .btn-color:focus{
   transition: none;
   box-shadow: none !important;
-  background-color: var(--main-brand-pop-colour);
+  background-color: #fff;
   border: none;
-  outline: 5px solid #fff;
+  outline: 5px solid var(--main-brand-pop-colour);
+  color: var(--main-text-colour);
 }
 .btn-color:active{
   background-color:#fff !important; 
-  border: 2px solid #36453B !important;
-  color: #36453B !important;
-  outline: 3px solid white !important;
+  border: 2px solid var(--main-brand-dark-colour) !important;
+  color: var(--main-text-colour) !important;
+  outline: 3px solid var(--main-brand-pop-colour) !important;
 }
 /* /. */
 
@@ -683,4 +686,8 @@ span.work-title {
 
 .accordion-body ul {
   padding-left: 0px;
+}
+/* credit tiles */
+.credit-tiles {
+  width: 100%;
 }
